[package]
name = "aper-actix"
version = "0.1.0"
authors = ["Paul Butler <paulgb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
aper = { path="../aper" }
rand = "0.8.3"
serde_json = "1.0.62"
