[package]
name = "aper-jamsocket"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/drifting-in-space/aper"

[dependencies]
jamsocket = { git = "https://github.com/jamsocket/jamsocket", version="0.1.6", features=["serde"] }
aper = { version="0.1.3", path = "../aper" }
serde = "1.0.133"
serde_json = "1.0.74"
bincode = "1.3.3"
log = "0.4.14"
chrono = { version = "0.4.19", features = ["serde"] }
