[package]
name = "aper-jamsocket"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/drifting-in-space/aper"

[dependencies]
jamsocket = { version="0.1.7", features=["serde"] }
aper = { version="0.1.3", path = "../aper" }
serde = "1.0.126"
serde_json = "1.0.70"
bincode = "1.3.3"
log = "0.4.14"
chrono = { version = "0.4.19", features = ["serde"] }
