[package]
name = "aper-leptos"
version = "0.5.0"
edition = "2021"

[dependencies]
aper = {path = "../aper"}
aper-websocket-client = { version="0.5.0", path="../aper-websocket-client" }
leptos = { version = "0.6.14", features = ["csr"] }
serde = "1.0.210"
tracing-subscriber = "0.3.18"
tracing-web = "0.1.3"
