[package]
name = "aper"
version = "0.3.0"
authors = ["Paul Butler <paulgb@gmail.com>"]
edition = "2018"
homepage = "https://aper.dev"
description = "Synchronized state machines over WebSockets"
repository = "https://github.com/drifting-in-space/aper"
license = "MIT"
readme = "README.md"
keywords = ["webassembly"]
categories = ["data-structures", "web-programming::websocket", "wasm"]

[dependencies]
serde = { version = "1.0.143", features = ["derive"] }
uuid = { version = "1.1.2", features = ["serde", "v4", "js"] }
aper_derive = { version="0.3.0", path="./aper_derive" }
fractional_index = "2.0.1"

[dev-dependencies]
serde_json = "1.0.83"
