[package]
name = "aper-serve"
version = "0.2.0"
edition = "2018"
repository = "https://github.com/drifting-in-space/aper"

[dependencies]
aper = {path = "../aper"}
aper-stateroom = {path = "../aper-stateroom"}
env_logger = "0.9.0"
stateroom-server = { git="https://github.com/drifting-in-space/stateroom.git" }
log = "0.4.17"
