[package]
name = "aper-stateroom"
version = "0.2.2"
edition = "2018"
repository = "https://github.com/drifting-in-space/aper"
publish = false

[dependencies]
stateroom = { version="0.2.8", features=["serde"] }
aper = { version="0.2.1", path = "../aper" }
serde = "1.0.143"
serde_json = "1.0.75"
bincode = "1.3.3"
log = "0.4.17"
chrono = { version = "0.4.22", features = ["serde"] }
