[package]
name = "aper-stateroom"
version = "0.3.0"
edition = "2018"
repository = "https://github.com/drifting-in-space/aper"
homepage = "https://aper.dev"
description = "Synchronized state machines over WebSockets"
license = "MIT"
readme = "README.md"
keywords = ["webassembly"]
categories = ["data-structures", "web-programming::websocket", "wasm"]

[dependencies]
stateroom = { version="0.4.0", features=["serde"] }
aper = { version="0.3.0", path = "../aper" }
serde = "1.0.143"
serde_json = "1.0.75"
bincode = "1.3.3"
log = "0.4.17"
chrono = { version = "0.4.22", features = ["serde"] }
