[package]
name = "aper-websocket-client"
version = "0.2.2"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.62"
aper = { version="0.2.1", path = "../aper" }
aper-stateroom = { version="0.2.1", path="../aper-stateroom" }
bincode = "1.3.3"
chrono = { version = "0.4.22", features = ["serde", "wasmbind"] }
js-sys = "0.3.59"
serde = "1.0.143"
serde_json = "1.0.74"
wasm-bindgen = "0.2.82"
web-sys = { version = "0.3.59", features = ["BinaryType", "WebSocket"] }
