[package]
name = "aper-yew"
version = "0.2.0"
authors = ["Paul Butler <paulgb@gmail.com>"]
edition = "2018"
repository = "https://github.com/drifting-in-space/aper"

[dependencies]
aper = { version="0.2.0", path = "../aper" }
aper-stateroom = { version="0.2.0", path="../aper-stateroom" }
bincode = "1.3.3"
chrono = { version = "0.4.22", features = ["serde", "wasmbind"] }
console_error_panic_hook = "0.1.7"
gloo-timers = "0.2.4"
js-sys = "0.3.59"
serde = "1.0.143"
serde_json = "1.0.74"
wasm-bindgen = "0.2.82"
web-sys = { version = "0.3.59", features = ["BinaryType", "WebSocket"] }
yew = "0.19.3"
