[package]
name = "aper"
version = "0.1.3"
authors = ["Paul Butler <paulgb@gmail.com>"]
edition = "2018"
homepage = "https://aper.dev"
description = "Synchronized state machines over WebSockets"
repository = "https://github.com/drifting-in-space/aper"
license = "MIT"
readme = "../README.md"
keywords = ["webassembly"]
categories = ["data-structures", "web-programming::websocket", "wasm"]

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde", "v4", "wasm-bindgen"] }
aper_derive = { version="0.1.3", path="./aper_derive" }
fractional_index = "1.0.0"

[dev-dependencies]
serde_json = "1.0.74"
