[package]
name = "aper"
version = "0.5.0"
edition = "2021"
homepage = "https://aper.dev"
description = "Synchronized state machines over WebSockets"
license = "MIT"
readme = "../README.md"
keywords = ["webassembly"]
categories = ["data-structures", "web-programming::websocket", "wasm"]

[dependencies]
bincode = "1.3.3"
dashmap = "6.0.1"
serde = { version = "1.0.204", features = ["derive"] }
aper_derive = {path = "./aper-derive", version="0.5.0"}
chrono = { version = "0.4.38", features = ["serde"] }
tracing = "0.1.40"
