[package]
name = "aper-derive"
version = "0.5.0"
edition = "2021"
homepage = "https://aper.dev"
description = "Synchronized state machines over WebSockets"
license = "MIT"
readme = "../../README.md"
keywords = ["webassembly"]
categories = ["data-structures", "web-programming::websocket", "wasm"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.72", features = ["full"] }
