[package]
name = "aper_derive"
version = "0.0.2"
authors = ["Paul Butler <paulgb@gmail.com>"]
edition = "2018"
homepage = "https://aper.dev"
description = "Synchronized state machines over WebSockets"
repository = "https://github.com/aper-dev/aper"
license = "MIT"
readme = "README.md"
keywords = ["webassembly"]
categories = ["data-structures", "web-programming::websocket", "wasm"]

[lib]
proc-macro = true

[dependencies]
inflections = "1.1.1"
proc-macro2 = "1.0.24"
quote = "1.0.9"
syn = { version = "1.0.60", features = ["full"] }
