[package]
name = "aper_derive"
version = "0.3.0"
authors = ["Paul Butler <paulgb@gmail.com>"]
edition = "2018"
homepage = "https://aper.dev"
description = "Synchronized state machines over WebSockets"
repository = "https://github.com/drifting-in-space/aper"
license = "MIT"
readme = "README.md"
keywords = ["webassembly"]
categories = ["data-structures", "web-programming::websocket", "wasm"]

[lib]
proc-macro = true

[dependencies]
inflections = "1.1.1"
proc-macro2 = "1.0.43"
quote = "1.0.21"
syn = "2.0.1"
