[package]
name = "aper-wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jamsocket = {git = "https://github.com/jamsocket/jamsocket"}
jamsocket-wasm = {git = "https://github.com/jamsocket/jamsocket"}
aper = {path = "../../aper"}
aper-jamsocket = {path = "../../aper-jamsocket"}
serde = { version = "1.0.127", features = ["derive"] }
