[package]
name = "counter-client"
version = "0.1.0"
authors = ["Paul Butler <paulgb@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aper = {path = "../../../aper"}
aper-leptos = { version="0.5.0", path="../../../aper-leptos" }
aper-stateroom = { version="0.5.0", path="../../../aper-stateroom" }
aper-websocket-client = { version="0.5.0", path="../../../aper-websocket-client" }
console_error_panic_hook = "0.1.6"
counter-common = {path="../common"}
leptos = { version = "0.6.14", features = ["csr"] }
serde = { version = "1.0.124", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-web = "0.1.3"
wasm-bindgen = "0.2.83"
web-sys = "0.3.48"
