[package]
name = "counter-client"
version = "0.1.0"
authors = ["Paul Butler <paulgb@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aper = {path = "../../../aper"}
aper-yew = {path = "../../../aper-yew"}
console_error_panic_hook = "0.1.6"
serde = { version = "1.0.124", features = ["derive"] }
wasm-bindgen = "0.2.84"
web-sys = "0.3.48"
yew = {version = "0.20.0", features=["csr"]}
counter-common = {path="../common"}
