[package]
name = "counter-service"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aper-stateroom = { path="../../../aper-stateroom" }
aper = { path="../../../aper" }
stateroom-wasm = { git="https://github.com/drifting-in-space/stateroom.git" }
counter-common = { path="../common" }
