[package]
name = "drop-four-client"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aper = {path="../../../aper"}
aper-jamsocket = {path="../../../aper-jamsocket"}
aper-yew = {path="../../../aper-yew"}
serde = { version = "1.0.127", features = ["derive"] }
wasm-bindgen = "0.2.75"
yew = "0.18.0"
jamsocket-wasm = {git = "https://github.com/jamsocket/jamsocket"}
drop-four-common = {path="../common"}
