[package]
name = "drop-four-service"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aper = {path="../../../aper"}
aper-jamsocket = {path="../../../aper-jamsocket"}
jamsocket-wasm = {git = "https://github.com/jamsocket/jamsocket"}
serde = { version = "1.0.127", features = ["derive"] }
