[package]
name = "drop-four-client"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aper = {path="../../../aper"}
aper-stateroom = {version="0.2.4"}
aper-yew = {path="../../../aper-yew"}
serde = { version = "1.0.127", features = ["derive"] }
wasm-bindgen = "0.2.79"
yew = "0.19.3"
drop-four-common = {path="../common"}
