[package]
name = "drop-four-client"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aper = {path="../../../aper"}
aper-stateroom = {path="../../../aper-stateroom"}
aper-yew = {path="../../../aper-yew"}
serde = { version = "1.0.127", features = ["derive"] }
wasm-bindgen = "0.2.83"
yew = {version = "0.20.0", features=["csr"]}
drop-four-common = {path="../common"}
