[package]
name = "drop-four-service"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aper-jamsocket = { path="../../../aper-jamsocket" }
jamsocket-wasm = { git = "https://github.com/jamsocket/jamsocket", version="0.1.5" }
drop-four-common = { path="../common" }
