[package]
name = "timer-service"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aper = { path="../../../aper" }
aper-jamsocket = { path="../../../aper-jamsocket" }
jamsocket-wasm = { git = "https://github.com/jamsocket/jamsocket", version="0.1.0" }
timer-common = { path="../common" }
