[package]
name = "timer-service"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aper = { path="../../../aper" }
aper-stateroom = { path="../../../aper-stateroom" }
stateroom-wasm = { git="https://github.com/drifting-in-space/stateroom.git" }
timer-common = { path="../common" }
